Wed Feb 18 16:28:37 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 16:45:49 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Tue Oct  7 08:02:13 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (runenv.vars): Use tr to remove newlines in multiple
	        lines of variables.

Fri Oct  3 02:26:45 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Fix up site.exp generation to reduce the quoting
	lossage somewhat.

Sun Aug 17 14:26:57 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (SRCS): Add $(SRCS) line.

Sun Feb  9 01:38:26 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Wed Nov 20 16:01:34 1996  Barry Jaspan  <bjaspan@mit.edu>

	* Makefile.in (check-): warn more loudly about unrun tests

Mon Oct  7 15:46:47 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (HAVE_RUNTEST): Renamed from RUNTEST as
		config/pre.in now defines.

Sun Apr  7 23:03:01 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Add KRB5_RUN_FLAGS

	* Makefile.in (site.exp): Create site.exp with runtime environment
		line from configure.

Mon Feb 26 03:38:24 1996  Mark W. Eichin  <eichin@cygnus.com>

	* *.exp: use $REALMNAME for the testing realm.
	* default.exp: if REALMNAME isn't set, set it to KRBTEST.COM.

Fri Sep 29 14:23:01 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (clean-unix): Remove the dejagnu temporary files.

Tue Aug 29 14:22:28 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Replace explicit library list with $(LIBS).  This
		gets set with the needed libraries (e.g. -lsocket on Solaris).

Sat Aug 26 18:10:44 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* .Sanitize: Add t_inetd.c

        * t_inetd.c: Small program to simulate the use of inetd in running
		tests. 
